force-app/main/default/objects/CA10__CaBenchmarkCheck__c/fields/Cloud_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Account_ID__c</fullName>
    <formula>IF (
NOT (ISBLANK(CA10__awsAccountId__c)),
CA10__awsAccountId__c,
IF (
NOT (ISBLANK(CA10__azureSubscriptionId__c)),
CA10__azureSubscriptionId__c,
IF (
NOT (ISBLANK(CA10__googleProjectId__c)),
CA10__googleProjectId__c,
null
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cloud Account ID</label>
    <type>Text</type>
</CustomField>