force-app/main/default/objects/CA10__CaBenchmarkCheck__c/fields/Cloud_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Account_Name__c</fullName>
    <formula>IF (
NOT (ISBLANK(CA10__awsAccountId__c)),
CA10__awsAccount__r.Name,
IF (
NOT (ISBLANK(CA10__azureSubscriptionId__c)),
CA10__azureSubscription__r.Name ,
IF (
NOT (ISBLANK(CA10__googleProjectId__c)),
CA10__googleProject__r.Name ,
null
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cloud Account Name</label>
    <type>Text</type>
</CustomField>