force-app/main/default/objects/CA10__CaBenchmarkCheck__c/fields/Lifetime_Interval__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Interval__c</fullName>
    <formula>IF (
Violation_Age__c &lt;= 7,
&apos;1. &lt; 7 days&apos;,
IF (
Violation_Age__c &gt; 7 &amp;&amp; Violation_Age__c &lt;= 30,
&apos;2. 8 - 30 days&apos;,
IF (
Violation_Age__c &gt; 30 &amp;&amp; Violation_Age__c &lt;= 90,
&apos;3. 31 - 90 days&apos;,
IF (
Violation_Age__c &gt; 90 &amp;&amp; Violation_Age__c &lt;= 180,
&apos;4. 90 - 180 days&apos;,
IF (
Violation_Age__c &gt; 180,
&apos;5. &gt; 180 days&apos;,
null
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifetime Interval</label>
    <type>Text</type>
</CustomField>