force-app/main/default/objects/CA10__CaBenchmarkCheck__c/fields/Violation_Age__c.field-meta.xml
<CustomField>
    <fullName>Violation_Age__c</fullName>
    <formula>IF (
Is_Closed__c = true &amp;&amp; CA10__status__c = &apos;INCOMPLIANT&apos;,
CA10__closeDate__c - CreatedDate,
IF (
Is_Closed__c = false &amp;&amp; CA10__status__c = &apos;INCOMPLIANT&apos;,
NOW () - CreatedDate,
null
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Violation Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>